console.log context for dynasty-nerds

--- a/template/app.json
+++ b/template/app.json
@@ -1,8 +1,17 @@
 {
   "name": "template",
   "displayName": "template",
-  "remoteIP": "192.168.86.190",
-  "samples": ["Mini", "FetchSample", "ActionSample", "Live/Video", "Live/Podcast", "TradeSample"],
+  "remoteIP": "192.168.1.132",
+  "samples": [
+    "Mini",
+    "FetchSample",
+    "ActionSample",
+    "Live/Video",
+    "Live/Podcast",
+    "TradeSample"
+  ],
   "selectedSample": 0,
-  "headerOptions": { "useLeagueSelector": false }
-} 
+  "headerOptions": {
+    "useLeagueSelector": false
+  }
+}
